--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "gsap": "^1.20.4",
+    "jquery": "^3.3.1"
+  },
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
@@ -12,8 +15,8 @@
     "gulp-sourcemaps": "^2.6.4"
   },
   "scripts": {
-    "start": "gulp",
-    "a": "",
+    "start": "gulp default",
+    "a": "gulp vendorjs",
     "b": ""
   },
   "repository": {
