--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "gsap": "^1.20.4",
     "jquery": "^3.3.1"
   },
   "devDependencies": {
@@ -15,9 +14,9 @@
     "gulp-sourcemaps": "^2.6.4"
   },
   "scripts": {
-    "start": "gulp default",
-    "a": "gulp vendorjs",
-    "b": ""
+    "start": "gulp",
+    "build": "gulp vendorjs",
+    "deploy": "gulp deploy"
   },
   "repository": {
     "type": "git",
